@@ -12,6 +12,9 @@ apt (0.8.16~exp5) experimental; urgency=low
       like the translations index
   * apt-pkg/acquire.cc:
     - fix potential divide-by-zero
+  * methods/mirror.cc:
+    - include the architecture(s) in the query string as well so 
+      that the server can make better decisions
 
  -- Michael Vogt <mvo@debian.org>  Fri, 05 Aug 2011 10:57:08 +0200
 
